# push_swap

./: CMakeLists.txt  README.md  a.out  atoli.c  check_args.c  do_oper.c  get_next_line.c  get_next_line.h  init_a_b_stacks.c  init_stack.c  print_stack.c  stack.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
checker/: a.out  checker  checker.c  checker.h  main.c  test
f_checker/: checker.c  checker.h  do_oper.c  ft_printf.h  get_next_line.c  get_next_line.h  main.c
f_push_swap/: insertion_sort.c  main.c  mini_sort.c  mini_sort_2.c  pre_insort.c  pre_sort.c  push_a.c  push_b.c  push_swap.c  push_swap.h  r_or_rr.c  sort_stack.c
libft/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_recursiv_shells_sort.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  (+20 more)
push_swap/: Insertion_sort.c  cpy_stacks.c  main.c  mini_sort.c  mini_sort_2.c  pre_insort.c  pre_sort.c  push_a.c  push_b.c  push_swap.c  push_swap.h  r_or_rr.c  sort_stack.c  sort_ten.c
to_do/: do_p.c  do_r.c  do_rr.c  do_s.c
